--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <button class="copy">Copy</button>
             </div>
             <button class="generate">Generate</button>
-            <div class="strength">Password strength : </div>
+            <div class="strength">Password Strength :
+              
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
